--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -16,6 +16,7 @@ Outline of my 2022 SiRAcon 2022 presentation, "Making R work for you (with autom
 - [ ] Questions/TODO list here
 
 ```{r setup, message = FALSE, warning = FALSE}
+library(siracon2022)
 library(gert)
 library(gh)
 library(purrr)
@@ -376,21 +377,11 @@ Plot releases over time: total GitHub releases per period (for all repositories)
 release frequency.
 
 ```{r my_releases}
-# returns time in UTC: if draft, created_at, else published_at
-get_repo_releases <- function(repo, owner) {
-  gh::gh("GET /repos/{owner}/{repo}/releases", owner = owner, repo = repo, .limit = Inf) |>
-    purrr::map_df(~ list(
-      id = .x$id, name = .x$name, author = .x$author$login,
-      time = lubridate::as_datetime(ifelse(.x$draft, .x$created_at, .x$published_at)),
-      tag = .x$tag_name, draft = .x$draft, prerelease = .x$prerelease, body = .x$body
-    ))
-}
-
 # cache results
 if (!exists("my_releases")) {
   my_releases <- map_dfr(
     c("rtraining", "rdev", "workshop7", "jbplot", "siracon2022") %>% setNames(., .),
-    get_repo_releases, "jabenninghoff",
+    gh_releases, "jabenninghoff",
     .id = "repo"
   ) |>
     arrange(time)
