Use backticks for code (spelling)

--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -375,7 +375,7 @@ write_eval <- function(string) {
 
 ## Releases
 
-Get releases from GitHub using siracon2022::gh_releases():
+Get releases from GitHub using `siracon2022::gh_releases()`:
 
 ```{r my_releases}
 # cache results
